--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -187,6 +187,8 @@ body {
 }
 
 .buying {
+  width: 100%;
+  height: 100%;
   background-color: rgba(241, 235, 230, 0.95);
   padding-bottom: 3rem;
 }
@@ -429,6 +431,10 @@ body {
   .buying__info-hint {
     display: none;
   }
+}
+
+.buying-transform {
+  transform: scale(1.2);
 }
 
 /*================================================================*/
